# local-tts-mcp

./: .gitignore  AGENTS.md  README.md  pyproject.toml
llms.txt/: ARCHITECTURE.md  PRD.md  RULES.md  TODO.md
pocket_mcp_project/pocket_server/: engine.py  server.py
pocket_mcp_project/tests/: test_integration.py  test_unit.py
src/local_tts/: client.py  resource_manager.py  server.py  service.py  system_lock.py
tests/: real_concurrency_test.py  test_concurrency.py  test_resource_manager.py  test_system_lock.py
