[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_tts"]

[project]
name = "local-tts-mcp"
version = "0.1.0"
description = "Local TTS MCP Server with Multiple Engines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "pocket-tts",
    "scipy",
    "numpy",
    "torch>=2.4.0",
    "huggingface-hub>=0.23.0",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[project.scripts]
local-tts = "local_tts.server:main"
